Fixed overflow article page

--- a/assets/less/oc_desktop.less
+++ b/assets/less/oc_desktop.less
@@ -75,11 +75,6 @@
   #oc-search-form {
     float: right;
   }
-  .scenario-article-header {
-    margin-left: 25px;
-    margin-right: 25px;
-    padding-top: 35px;
-  }
   .scenario-article-image {
     margin-left: 25px;
     margin-right: 25px;
@@ -92,17 +87,6 @@
     -moz-column-count: 2;
     column-count: 2;
     float: right;
-  }
-  .scenario-article-narrative-wrapper {
-    padding-left: 10px;
-    margin-top: 25px;
-    background-color: @oc-white;
-  }
-  .scenario-article-meta {
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 25px;
-    padding-bottom: 15px;
   }
   .scenario-article-timestamp {
     padding-top: 5px;
